- Converted the configuration code to use QSettings, in practice this means the configuration file moved to
	the registry under Windows and into ~/.config/LDForge under Linux. Unfortunately this means settings get
	lost during transition from version 0.2 and 0.3.
- Added a new editing mode for drawing circles.
- Corrections to the primitive generator:
	- Fixed: "Hi-Res" was not prepended to the names of 48/ primitives.
	- Fixed: Checking the Hi-Res option would not allow segment values over 16.
	- Added support for multiple spaces before the ring number.
- Changing to draw mode while in free camera now causes the camera to be changed to top.
- Added config fields for default name/username/license. This data will be automatically filled
	into forms that require such information.
- Upon first start the configuration prompt pops up on its own, defaulting on the profile tab. This
	way the user can fill in the profile data on the first start and get that out of the way (and
	gives the opportunity to see the other config fields)
- Added new action "Add History Line" for quickly inserting 0 !HISTORY lines to headers
- Added new action "Go to line", default shortcut Ctrl-G. It should be obvious what it does.
- Added new actions "Hide" and "Reveal" which allow direct setting of objects' visibility setting instead of
	toggling it.
- Added support for logoed studs, this should satisfy Steffen. :p
- Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction from errorneous MLCAD
	syntax ('0 BFC CERTIFY CLIP').
- The viewport now uses 7 sets of rotation/pan/zoom values, one for each camera. Changing these values
	in one camera no longer affects other cameras.
- When an external program is attempted to be used without a binary path defined, one will be asked
	with an input dialog instead of being told to go to configuration to set the path.
- When adding edges with Intersector (which is done with Isecalc), the user is prompted for Isecalc's